bin/testsuite/tests/compiler/src/errors/compiler3756.swg
#global testerror "Err0056"
#test
{
    var x: mtd()
}